[tool.poetry]
name = "pythonproject10"
version = "0.1.0"
description = ""
authors = ["Nikita-mbyte <101355124+Nikita-mbyte@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
